--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,15 @@
 /* You can add global styles to this file, and also import other style files */
+*, ::before, ::after {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0
+}
+
+body {
+  min-height: 100%;
+  height: 100vh;
+}
+
+span.label {
+  color: gray;
+}
